@startuml Movement

' =========================
'  Style
' =========================

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Interfaces
' =========================

interface InputHandler <<Controller>> {
  + handleMovement(commands : Set<MovementInput>) : Vector2d
}

interface Engine <<Controller>> {
  + addInput(i : Input)
  + mainLoop()
}

interface Player <<Model>> {
  + setDirection(dir : Vector2d)
  + getSpeed() : double
}

' =========================
'  Classes
' =========================

class GameViewImpl <<View>> {
  - keyToInputMap : Map<KeyCode, MovementInput>
  + handleKeyPressed(e : KeyEvent)
}

class InputHandlerImpl {
  + handleMovement(commands : Set<MovementInput>) : Vector2d
}

enum MovementInput {
  GO_UP
  GO_DOWN
  GO_LEFT
  GO_RIGHT
  + getVector() : Vector2d
}

' =========================
'  Relations
' =========================
GameViewImpl --> Engine
GameViewImpl ..> MovementInput

Engine --> InputHandler
InputHandler <|.. InputHandlerImpl
InputHandler ..> MovementInput

Engine --> Player

@enduml